fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Monetary_Request__c/Medical_Education_Grant_Monetary_Request__c.object-meta.xml
<CustomObject>
    <label>Medical Education Grant Monetary Request</label>
    <nameField>
        <displayFormat>MEGMR-{00000}</displayFormat>
        <label>Medical Education Grant Monetary Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Education Grant Monetary Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>