fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Monetary_Request__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>