fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Monetary_Request__c/fields/Medical_Education_Grant__c.field-meta.xml
<CustomField>
    <fullName>Medical_Education_Grant__c</fullName>
    <label>Medical Education Grant</label>
    <referenceTo>Medical_Education_Grant__c</referenceTo>
    <relationshipLabel>Medical Education Grant Monetary Request</relationshipLabel>
    <relationshipName>Medical_Education_Grant_Monetary_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>