fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant_Monetary_Request__c/fields/Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amount__c</fullName>
    <label>Proposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>